--- a/details/templates/details/snippets/form.html
+++ b/details/templates/details/snippets/form.html
@@ -1,4 +1,5 @@
 {% load env_extras %}
+{% load jsonify %}
 <form method="post" enctype="multipart/form-data" id="form-detail">
   {% csrf_token %}
   <div class="card mb-4">
@@ -85,6 +86,9 @@
         </div>
 
         {% for field in origin_form %}
+        {% if field.is_hidden %}
+        {{ field }}
+        {% else %}
         <div class="form-group">
           {{ field.label_tag }}
           {{ field }}
@@ -96,6 +100,7 @@
           {% endfor %}
           {% endif %}
         </div>
+        {% endif %}
         {% endfor %}
       </div>
       <i class='icon bx bx-right-arrow-alt bx-md text-title'></i>
@@ -112,6 +117,9 @@
           </div>
         </div>
         {% for field in destiny_form %}
+        {% if field.is_hidden %}
+        {{ field }}
+        {% else %}
         <div class="form-group">
           {{ field.label_tag }}
           {{ field }}
@@ -123,13 +131,14 @@
           {% endfor %}
           {% endif %}
         </div>
+        {% endif %}
         {% endfor %}
       </div>
     </div>
 
     <div class="actions right mt-5">
-      <button type="submit" class="btn btn-primary">{{ btnText }}</button>
       <a href="{% url 'orders:add-addresses' %}" class="btn btn-default">Cancelar</a>
+      <button type="submit" class="btn btn-primary">{{ btnText }}</button>
     </div>
   </div>
 </form>
@@ -160,45 +169,39 @@
   }
 
   function changePositionAddressOrigin(position, address_text) {
-    console.log('ldd')
-    var originPositionInput = document.getElementsByName('origin_position')[0];
-    if (typeof originPositionInput !== 'undefined') {
-      originPositionInput.remove();
-    }
-    window.origin_address_text = address_text;
     var address = address_text.split(", ");
     form.origin_address.value = address[0];
     form.origin_district.value = address[1];
     form.origin_city.value = address[2];
-    var inputPosition = document.createElement('input')
-    inputPosition.setAttribute("type", "hidden")
-    inputPosition.setAttribute("name", "origin_position")
-    inputPosition.value = JSON.stringify(position);
-    form.origin_reference.after(inputPosition);
+    form.origin_position.value = position;
+    if(form.destiny_address.value !== null && form.destiny_district.value !== null && form.destiny_city.value !==  ''){
+      getDistanceMatrix();
+    }
   }
 
   function changePositionAddressDestiny(position, address_text) {
-    var destinyPositionInput = document.getElementsByName('destiny_position')[0];
-    if (typeof destinyPositionInput !== 'undefined') {
-      destinyPositionInput.remove();
-    }
-    window.destiny_address_text = address_text;
     var address = address_text.split(", ");
     form.destiny_address.value = address[0];
     form.destiny_district.value = address[1];
     form.destiny_city.value = address[2];
-    var inputPosition = document.createElement('input')
-    inputPosition.setAttribute("type", "hidden")
-    inputPosition.setAttribute("name", "destiny_position")
-    inputPosition.value = JSON.stringify(position);
-    form.destiny_reference.after(inputPosition);
+    form.destiny_position.value = JSON.stringify(position);
 
-    getDistanceMatrix();
+    if(form.origin_address.value !== null && form.origin_district.value !== null && form.origin_city.value !==  ''){
+      getDistanceMatrix();
+    }
   }
 
   function getDistanceMatrix() {
     const travel_mode = 'DRIVING';
-    calculateDistance(travel_mode, window.origin_address_text, window.destiny_address_text);
+    var origin_address_text = getOriginAddressText();
+    var destiny_address_text = getDestinyAddressText();
+    calculateDistance(travel_mode, origin_address_text, destiny_address_text);
+  }
+  function getOriginAddressText(){
+    return `${form.origin_address.value}, ${form.origin_district.value}, ${form.origin_city.value}`;
+  }
+  function getDestinyAddressText(){
+    return `${form.destiny_address.value}, ${form.destiny_district.value}, ${form.destiny_city.value}`;
   }
   function calculateDistance(travel_mode, origin_address, destiny_address) {
     var DistanceMatrixService = new google.maps.DistanceMatrixService();
@@ -245,23 +248,8 @@
     inputDistance(price, distance_in_kilo);
   }
   function inputDistance(price, distance_in_kilo) {
-    var priceInputBefore = document.getElementsByName('price')[0];
-    var distanceInputBefore = document.getElementsByName('distance')[0];
-    if (typeof priceInputBefore !== 'undefined' && typeof distanceInputBefore !== 'undefined') {
-      priceInputBefore.remove();
-      distanceInputBefore.remove();
-    }
-    var price_input = document.createElement('input');
-    price_input.setAttribute('type', 'hidden');
-    price_input.setAttribute('name', 'price');
-    price_input.value = price;
-    form.destiny_reference.after(price_input);
-
-    var distance_input = document.createElement('input');
-    distance_input.setAttribute('type', 'hidden');
-    distance_input.setAttribute('name', 'distance');
-    distance_input.value = distance_in_kilo.toFixed(1);
-    price_input.after(distance_input);
+    form.price_rate.value = price;
+    form.distance.value = distance_in_kilo.toFixed(1);
   }
   function loadScript() {
     // Create the script tag, set the appropriate attributes
@@ -295,10 +283,12 @@
       address_before: '',
       address_list: [],
       address_select: {},
+      client: {},
       emptyMessageText: 'Ingrese la dirección, distrito o ciudad',
       btnDisabled: true,
       getAddressBefore(value) {
-        fetch('/addresses/get-address/?q=' + value)
+        const slug = this.client.fields.slug; 
+        fetch('/addresses/get-address/'+slug+'/?q=' + value)
           .then(res => res.json())
           .then(data => {
             if (!data.length) {
@@ -308,6 +298,11 @@
             }
             this.address_list = data;
           });
+      },
+      getClientOrder(){
+        fetch('/orders/get-client/')
+        .then(res => res.json())
+        .then(data => this.client = data[0]);
       },
       getAddressText(address){
         return `${address.address}, ${address.district}, ${address.city}`;
@@ -327,6 +322,7 @@
         changeInfoAddressOrigin(this.address_select.fields);
       },
       init(){
+        this.getClientOrder(); 
         this.$watch('address_before', (value) => {
           if (!value) {
               this.emptyMessageText = 'Ingrese la dirección, distrito o ciudad';
