--- a/details/templates/details/snippets/form.html
+++ b/details/templates/details/snippets/form.html
@@ -339,6 +339,7 @@
     form.origin_email.value = address_selected.email;
     form.origin_cell_phone.value = address_selected.cell_phone;
     form.origin_reference.value = address_selected.reference;
+    form.origin_address_detail.value = address_selected.address_detail;
   }
 </script>
 {% endblock scripts %}
