--- a/drivers/templates/drivers/create.html
+++ b/drivers/templates/drivers/create.html
@@ -16,6 +16,6 @@
 {% block content %}
 
 <div class="card card-form mb-10">
-  {% include "drivers/snippets/form.html" with btnText='Guardar' %} 
+  {% include "drivers/snippets/form.html" with btnText='Continuar' %} 
 </div>
 {% endblock content %}
