--- a/orders/templates/orders/mails/origin-complete-order.html
+++ b/orders/templates/orders/mails/origin-complete-order.html
@@ -1,5 +1,5 @@
 {% load inlinecss %}
-{% inline "css/style.css" %}
+{% inlinecss "css/styles.css" %}
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -21,3 +21,4 @@
   </div>
 </body>
 </html>
+{% endinlinecss %}
