--- a/orders/templates/orders/add-addresses.html
+++ b/orders/templates/orders/add-addresses.html
@@ -48,7 +48,7 @@
                 </div> 
                 <div class="step-content">
                     <div class="text-small caption">Paso 2</div>
-                    <h6>Direcciones de envió</h6>
+                    <h6>Direcciones de envío</h6>
                 </div>
                 <div class="step-progress-mobile"></div>
             </div>
@@ -203,7 +203,7 @@
                 {% endfor %}
 
                 {% else %}
-                    <h5 class="text-muted text-center">No hay una dirección de envió para este pedido.</h5>
+                    <h5 class="text-muted text-center">No hay una dirección de envío para este pedido.</h5>
                     <div class="text-small text-center">Le aconsejamos agregar una dirección para continuar...</div>
                 {% endif %}
             </div>
