--- a/orders/templates/orders/assign/deliveries.html
+++ b/orders/templates/orders/assign/deliveries.html
@@ -84,7 +84,7 @@
             Detalles del pedido
         </div>
         <div class="order-list-head-item">
-            Dirección de envió
+            Dirección de envío
         </div>
         <div class="order-list-head-item">
           ¿Quién te atenderá? 
