--- a/orders/templates/orders/create.html
+++ b/orders/templates/orders/create.html
@@ -40,7 +40,7 @@
                 </div> 
                 <div class="step-content">
                     <div class="text-small caption">Paso 2</div>
-                    <h6>Direcciones de envió</h6>
+                    <h6>Direcciones de envío</h6>
                 </div>
                 <div class="step-progress-mobile"></div>
             </div>
