--- a/orders/templates/orders/index.html
+++ b/orders/templates/orders/index.html
@@ -148,7 +148,7 @@
             Dirección de recojo
         </div>
         <div class="order-list-head-item">
-            Dirección de envió
+            Dirección de envío
         </div>
         <div class="order-list-head-item">
         </div>
