--- a/courier_app/static/css/components/table.css
+++ b/courier_app/static/css/components/table.css
@@ -37,6 +37,8 @@
 }
 .table-list .table-list-row .table-list-col .content{
     text-align: right;
+    display: flex;
+    justify-content: flex-end;
 }
 .table-list .table-list-row .table-list-col .title{
     display: block;
@@ -80,6 +82,7 @@
     }
     .table-list .table-list-row .table-list-col .content{
         text-align: left;
+        justify-content: flex-start;
     }
 }
 @media (min-width: 1024px){
