--- a/orders/templates/orders/detail.html
+++ b/orders/templates/orders/detail.html
@@ -138,7 +138,7 @@
                 {% endfor %}
 
                 {% else %}
-                    <h5 class="text-muted text-center">No hay una dirección de envió para para este pedido.</h5>
+                    <h5 class="text-muted text-center">No hay una dirección de envío para para este pedido.</h5>
                     <div class="text-small text-center">Le aconsejamos agregar una dirección para continuar...</div>
                 {% endif %}
             </div>
