--- a/orders/templates/orders/payment.html
+++ b/orders/templates/orders/payment.html
@@ -44,7 +44,7 @@
                 </div> 
                 <div class="step-content">
                     <div class="text-small caption">Paso 2</div>
-                    <h6>Direcciones de envió</h6>
+                    <h6>Direcciones de envío</h6>
                 </div>
                 <div class="step-progress-mobile"></div>
             </div>
@@ -168,7 +168,7 @@
                 {% endfor %}
 
                 {% else %}
-                    <h5 class="text-muted text-center">No hay una dirección de envió para para este pedido.</h5>
+                    <h5 class="text-muted text-center">No hay una dirección de envío para para este pedido.</h5>
                     <div class="text-small text-center">Le aconsejamos agregar una dirección para continuar...</div>
                 {% endif %}
             </div>
